added url path to viewr

--- a/notebooks/neuron_visualize.ipynb
+++ b/notebooks/neuron_visualize.ipynb
@@ -8,7 +8,8 @@
    "source": [
     "import numpy as np\n",
     "import open3d as o3d\n",
-    "from collections import namedtuple"
+    "from collections import namedtuple\n",
+    "import rerun as rr "
    ]
   },
   {
@@ -70,22 +71,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import rerun as rr "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
@@ -95,58 +80,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "openstreetmap_url = \"test\"\n",
-    "volume_m3 = \"foo\"\n",
-    "volume_f3 = \"yoo\""
+    "neuromorpho_url = \"https://neuromorpho.org/neuron_info.jsp?neuron_name=H16-06-008-21-01-01-01_688788732_m_dendriteaxon\"\n",
+    "soma = \"foo\"\n",
+    "dendrites = \"yoo\"\n",
+    "\n",
+    "neuro_id = 'NMO_275879'\n",
+    "species_name = \t'human'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2024-04-02T05:05:00Z INFO  winit::platform_impl::platform::x11::window] Guessed window scale factor: 1\n",
-      "[2024-04-02T05:05:00Z WARN  wgpu_hal::vulkan::instance] Unable to find extension: VK_EXT_swapchain_colorspace\n",
-      "[2024-04-02T05:05:00Z INFO  tracing::span] perform;\n",
-      "[2024-04-02T05:05:00Z INFO  zbus::handshake] write_command; command=Auth(Some(External), Some([49, 48, 48, 48]))\n",
-      "[2024-04-02T05:05:00Z INFO  tracing::span] read_command;\n",
-      "[2024-04-02T05:05:00Z INFO  zbus::handshake] write_command; command=NegotiateUnixFD\n",
-      "[2024-04-02T05:05:00Z INFO  tracing::span] read_command;\n",
-      "[2024-04-02T05:05:00Z INFO  zbus::handshake] write_command; command=Begin\n",
-      "[2024-04-02T05:05:00Z INFO  tracing::span] socket reader;\n",
-      "[2024-04-02T05:05:00Z INFO  tracing::span] perform;\n",
-      "[2024-04-02T05:05:00Z INFO  zbus::handshake] write_command; command=Auth(Some(External), Some([49, 48, 48, 48]))\n",
-      "[2024-04-02T05:05:00Z INFO  tracing::span] read_command;\n",
-      "[2024-04-02T05:05:00Z INFO  zbus::handshake] write_command; command=NegotiateUnixFD\n",
-      "[2024-04-02T05:05:00Z INFO  tracing::span] read_command;\n",
-      "[2024-04-02T05:05:00Z INFO  zbus::handshake] write_command; command=Begin\n",
-      "[2024-04-02T05:05:00Z INFO  tracing::span] socket reader;\n",
-      "[2024-04-02T05:05:00Z INFO  zbus::connection] {}; obj_server_task_name=\"ObjectServer task\"\n",
-      "[2024-04-02T05:05:00Z INFO  zbus::object_server] dispatch_message; msg=Msg { type: MethodCall, sender: UniqueName(Str(Borrowed(\":1.4\"))), path: ObjectPath(\"/org/a11y/atspi/accessible/root\"), iface: InterfaceName(Str(Borrowed(\"org.freedesktop.DBus.Properties\"))), member: MemberName(Str(Borrowed(\"Set\"))), body: Signature(\"ssv\") }\n",
-      "[2024-04-02T05:05:00Z INFO  zbus::object_server] dispatch_method_call; msg=Msg { type: MethodCall, sender: UniqueName(Str(Borrowed(\":1.4\"))), path: ObjectPath(\"/org/a11y/atspi/accessible/root\"), iface: InterfaceName(Str(Borrowed(\"org.freedesktop.DBus.Properties\"))), member: MemberName(Str(Borrowed(\"Set\"))), body: Signature(\"ssv\") }\n",
-      "[2024-04-02T05:05:00Z INFO  zbus::object_server] dispatch_method_call_try; msg=Msg { type: MethodCall, sender: UniqueName(Str(Borrowed(\":1.4\"))), path: ObjectPath(\"/org/a11y/atspi/accessible/root\"), iface: InterfaceName(Str(Borrowed(\"org.freedesktop.DBus.Properties\"))), member: MemberName(Str(Borrowed(\"Set\"))), body: Signature(\"ssv\") }\n",
-      "[2024-04-02T05:05:00Z WARN  re_log_types::path::parse_path] When parsing the entity path \"neuron cell\": Unescaped whitespace. The path will be interpreted as /neuron\\ cell\n"
+      "[2024-04-02T05:25:35Z INFO  winit::platform_impl::platform::x11::window] Guessed window scale factor: 1\n",
+      "[2024-04-02T05:25:35Z WARN  wgpu_hal::vulkan::instance] Unable to find extension: VK_EXT_swapchain_colorspace\n",
+      "[2024-04-02T05:25:35Z INFO  tracing::span] perform;\n",
+      "[2024-04-02T05:25:35Z INFO  zbus::handshake] write_command; command=Auth(Some(External), Some([49, 48, 48, 48]))\n",
+      "[2024-04-02T05:25:35Z INFO  tracing::span] read_command;\n",
+      "[2024-04-02T05:25:35Z INFO  zbus::handshake] write_command; command=NegotiateUnixFD\n",
+      "[2024-04-02T05:25:35Z INFO  tracing::span] read_command;\n",
+      "[2024-04-02T05:25:35Z INFO  zbus::handshake] write_command; command=Begin\n",
+      "[2024-04-02T05:25:35Z INFO  tracing::span] socket reader;\n",
+      "[2024-04-02T05:25:35Z INFO  tracing::span] perform;\n",
+      "[2024-04-02T05:25:35Z INFO  zbus::handshake] write_command; command=Auth(Some(External), Some([49, 48, 48, 48]))\n",
+      "[2024-04-02T05:25:35Z INFO  tracing::span] read_command;\n",
+      "[2024-04-02T05:25:35Z INFO  zbus::handshake] write_command; command=NegotiateUnixFD\n",
+      "[2024-04-02T05:25:35Z INFO  tracing::span] read_command;\n",
+      "[2024-04-02T05:25:35Z INFO  zbus::handshake] write_command; command=Begin\n",
+      "[2024-04-02T05:25:35Z INFO  tracing::span] socket reader;\n",
+      "[2024-04-02T05:25:35Z INFO  zbus::connection] {}; obj_server_task_name=\"ObjectServer task\"\n",
+      "[2024-04-02T05:25:35Z INFO  zbus::object_server] dispatch_message; msg=Msg { type: MethodCall, sender: UniqueName(Str(Borrowed(\":1.4\"))), path: ObjectPath(\"/org/a11y/atspi/accessible/root\"), iface: InterfaceName(Str(Borrowed(\"org.freedesktop.DBus.Properties\"))), member: MemberName(Str(Borrowed(\"Set\"))), body: Signature(\"ssv\") }\n",
+      "[2024-04-02T05:25:35Z INFO  zbus::object_server] dispatch_method_call; msg=Msg { type: MethodCall, sender: UniqueName(Str(Borrowed(\":1.4\"))), path: ObjectPath(\"/org/a11y/atspi/accessible/root\"), iface: InterfaceName(Str(Borrowed(\"org.freedesktop.DBus.Properties\"))), member: MemberName(Str(Borrowed(\"Set\"))), body: Signature(\"ssv\") }\n",
+      "[2024-04-02T05:25:35Z INFO  zbus::object_server] dispatch_method_call_try; msg=Msg { type: MethodCall, sender: UniqueName(Str(Borrowed(\":1.4\"))), path: ObjectPath(\"/org/a11y/atspi/accessible/root\"), iface: InterfaceName(Str(Borrowed(\"org.freedesktop.DBus.Properties\"))), member: MemberName(Str(Borrowed(\"Set\"))), body: Signature(\"ssv\") }\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2024-04-02T05:05:03Z ERROR re_query::archetype_view] found corrupt cell -- mismatched number of instances\n"
+      "[2024-04-02T05:25:36Z ERROR re_query::archetype_view] found corrupt cell -- mismatched number of instances\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "rr.init(\"neuron morphology viewr\", spawn=True)\n",
+    "rr.init(\"neuron morphology viewer\", spawn=True)\n",
     "\n",
     "\n",
     "rr.log(\"neuron cell\", rr.Points3D(\n",
@@ -161,13 +148,13 @@
     "    \"markdown\",\n",
     "    rr.TextDocument(\n",
     "        f'''\n",
-    "[View Biomass location in OpenStreetMap]({openstreetmap_url})\n",
+    "[View Neuron cell in neuromorpho.org]({neuromorpho_url})\n",
     "\n",
-    "## Biomass Volume:\n",
+    "## Neuron cell details:\n",
     "\n",
-    "| Cubic Meters | Cubic Feet |\n",
+    "| species_name | Neuron ID |\n",
     "| ------------ | ---------- |\n",
-    "| {volume_m3}  | {volume_f3} |\n",
+    "| {species_name}  | {neuro_id} |\n",
     "        \n",
     "        \n",
     "        '''.strip(),\n",
@@ -192,19 +179,19 @@
     "\n",
     "\n",
     "\n",
-    "rr.log(\n",
-    "    \"convex hull\",\n",
-    "    rr.LineStrips3D(\n",
-    "        [hull_2_line_strips],\n",
-    "        colors=[[255, 0, 0]],  \n",
-    "        radii=[0.005],         # Line radius\n",
-    "        labels=[\"Hull Line Strip\"]\n",
-    "    ),\n",
-    ")\n",
+    "# rr.log(\n",
+    "#     \"convex hull\",\n",
+    "#     rr.LineStrips3D(\n",
+    "#         [hull_2_line_strips],\n",
+    "#         colors=[[255, 0, 0]],  \n",
+    "#         radii=[0.005],         # Line radius\n",
+    "#         labels=[\"Hull Line Strip\"]\n",
+    "#     ),\n",
+    "# )\n",
     "\n",
     "\n",
-    "rr.log(\"scan screenshot\", \n",
-    "       rr.Image(data=orthoimage))\n"
+    "# rr.log(\"scan screenshot\", \n",
+    "#        rr.Image(data=orthoimage))\n"
    ]
   }
  ],
