--- a/notebooks/neuron_visualize.ipynb
+++ b/notebooks/neuron_visualize.ipynb
@@ -58,29 +58,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Example usage\n",
     "\n",
-    "swc_file_path = '/home/ybb/vs/neuron-data/neuron_nmo/allen cell types/Source-Version/H16-06-008-21-01-01-01_688788732_m_dendriteaxon.swc'  \n",
+    "swc_file_path = '/home/ybb/vs/neuron-data/neuron_nmo/allen cell types/Source-Version/H16-06-008-21-01-01-01_688788732_m_dendriteaxon.swc'\n",
+    "swc_file_path_2 = '/home/ybb/vs/neuron-data/neuron_nmo/allen cell types/CNG version/H16-06-008-21-01-01-01_688788732_m_dendriteaxon.CNG.swc'\n",
+    "\n",
     "point_cloud = create_point_cloud_from_swc(swc_file_path)\n",
+    "point_cloud_2 = create_point_cloud_from_swc(swc_file_path_2)\n",
+    "\n",
+    "\n",
     "o3d.visualization.draw_geometries([point_cloud])  # Visualize the point cloud"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "rerun_neuron = PointCloudTuple(point_cloud)"
+    "rerun_neuron = PointCloudTuple(point_cloud)\n",
+    "rerun_neuron_2 = PointCloudTuple(point_cloud_2)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,40 +100,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2024-04-02T05:36:41Z INFO  winit::platform_impl::platform::x11::window] Guessed window scale factor: 1\n",
-      "[2024-04-02T05:36:41Z WARN  wgpu_hal::vulkan::instance] Unable to find extension: VK_EXT_swapchain_colorspace\n",
-      "[2024-04-02T05:36:41Z INFO  tracing::span] perform;\n",
-      "[2024-04-02T05:36:41Z INFO  zbus::handshake] write_command; command=Auth(Some(External), Some([49, 48, 48, 48]))\n",
-      "[2024-04-02T05:36:41Z INFO  tracing::span] read_command;\n",
-      "[2024-04-02T05:36:41Z INFO  zbus::handshake] write_command; command=NegotiateUnixFD\n",
-      "[2024-04-02T05:36:41Z INFO  tracing::span] read_command;\n",
-      "[2024-04-02T05:36:41Z INFO  zbus::handshake] write_command; command=Begin\n",
-      "[2024-04-02T05:36:41Z INFO  tracing::span] socket reader;\n",
-      "[2024-04-02T05:36:41Z INFO  tracing::span] perform;\n",
-      "[2024-04-02T05:36:41Z INFO  zbus::handshake] write_command; command=Auth(Some(External), Some([49, 48, 48, 48]))\n",
-      "[2024-04-02T05:36:41Z INFO  tracing::span] read_command;\n",
-      "[2024-04-02T05:36:41Z INFO  zbus::handshake] write_command; command=NegotiateUnixFD\n",
-      "[2024-04-02T05:36:41Z INFO  tracing::span] read_command;\n",
-      "[2024-04-02T05:36:41Z INFO  zbus::handshake] write_command; command=Begin\n",
-      "[2024-04-02T05:36:41Z INFO  tracing::span] socket reader;\n",
-      "[2024-04-02T05:36:41Z INFO  zbus::connection] {}; obj_server_task_name=\"ObjectServer task\"\n",
-      "[2024-04-02T05:36:41Z INFO  zbus::object_server] dispatch_message; msg=Msg { type: MethodCall, sender: UniqueName(Str(Borrowed(\":1.4\"))), path: ObjectPath(\"/org/a11y/atspi/accessible/root\"), iface: InterfaceName(Str(Borrowed(\"org.freedesktop.DBus.Properties\"))), member: MemberName(Str(Borrowed(\"Set\"))), body: Signature(\"ssv\") }\n",
-      "[2024-04-02T05:36:41Z INFO  zbus::object_server] dispatch_method_call; msg=Msg { type: MethodCall, sender: UniqueName(Str(Borrowed(\":1.4\"))), path: ObjectPath(\"/org/a11y/atspi/accessible/root\"), iface: InterfaceName(Str(Borrowed(\"org.freedesktop.DBus.Properties\"))), member: MemberName(Str(Borrowed(\"Set\"))), body: Signature(\"ssv\") }\n",
-      "[2024-04-02T05:36:41Z INFO  zbus::object_server] dispatch_method_call_try; msg=Msg { type: MethodCall, sender: UniqueName(Str(Borrowed(\":1.4\"))), path: ObjectPath(\"/org/a11y/atspi/accessible/root\"), iface: InterfaceName(Str(Borrowed(\"org.freedesktop.DBus.Properties\"))), member: MemberName(Str(Borrowed(\"Set\"))), body: Signature(\"ssv\") }\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[2024-04-02T05:36:46Z ERROR re_query::archetype_view] found corrupt cell -- mismatched number of instances\n"
+      "[2024-04-02T05:48:17Z INFO  winit::platform_impl::platform::x11::window] Guessed window scale factor: 1\n",
+      "[2024-04-02T05:48:17Z WARN  wgpu_hal::vulkan::instance] Unable to find extension: VK_EXT_swapchain_colorspace\n",
+      "[2024-04-02T05:48:17Z INFO  tracing::span] perform;\n",
+      "[2024-04-02T05:48:17Z INFO  zbus::handshake] write_command; command=Auth(Some(External), Some([49, 48, 48, 48]))\n",
+      "[2024-04-02T05:48:17Z INFO  tracing::span] read_command;\n",
+      "[2024-04-02T05:48:17Z INFO  zbus::handshake] write_command; command=NegotiateUnixFD\n",
+      "[2024-04-02T05:48:17Z INFO  tracing::span] read_command;\n",
+      "[2024-04-02T05:48:17Z INFO  zbus::handshake] write_command; command=Begin\n",
+      "[2024-04-02T05:48:17Z INFO  tracing::span] socket reader;\n",
+      "[2024-04-02T05:48:17Z INFO  tracing::span] perform;\n",
+      "[2024-04-02T05:48:17Z INFO  zbus::handshake] write_command; command=Auth(Some(External), Some([49, 48, 48, 48]))\n",
+      "[2024-04-02T05:48:17Z INFO  tracing::span] read_command;\n",
+      "[2024-04-02T05:48:17Z INFO  zbus::handshake] write_command; command=NegotiateUnixFD\n",
+      "[2024-04-02T05:48:17Z INFO  tracing::span] read_command;\n",
+      "[2024-04-02T05:48:17Z INFO  zbus::handshake] write_command; command=Begin\n",
+      "[2024-04-02T05:48:17Z INFO  tracing::span] socket reader;\n",
+      "[2024-04-02T05:48:17Z INFO  zbus::connection] {}; obj_server_task_name=\"ObjectServer task\"\n",
+      "[2024-04-02T05:48:17Z INFO  zbus::object_server] dispatch_message; msg=Msg { type: MethodCall, sender: UniqueName(Str(Borrowed(\":1.4\"))), path: ObjectPath(\"/org/a11y/atspi/accessible/root\"), iface: InterfaceName(Str(Borrowed(\"org.freedesktop.DBus.Properties\"))), member: MemberName(Str(Borrowed(\"Set\"))), body: Signature(\"ssv\") }\n",
+      "[2024-04-02T05:48:17Z INFO  zbus::object_server] dispatch_method_call; msg=Msg { type: MethodCall, sender: UniqueName(Str(Borrowed(\":1.4\"))), path: ObjectPath(\"/org/a11y/atspi/accessible/root\"), iface: InterfaceName(Str(Borrowed(\"org.freedesktop.DBus.Properties\"))), member: MemberName(Str(Borrowed(\"Set\"))), body: Signature(\"ssv\") }\n",
+      "[2024-04-02T05:48:17Z INFO  zbus::object_server] dispatch_method_call_try; msg=Msg { type: MethodCall, sender: UniqueName(Str(Borrowed(\":1.4\"))), path: ObjectPath(\"/org/a11y/atspi/accessible/root\"), iface: InterfaceName(Str(Borrowed(\"org.freedesktop.DBus.Properties\"))), member: MemberName(Str(Borrowed(\"Set\"))), body: Signature(\"ssv\") }\n",
+      "[2024-04-02T05:48:17Z WARN  re_log_types::path::parse_path] When parsing the entity path \"neuron cell 2\": Unescaped whitespace. The path will be interpreted as /neuron\\ cell\\ 2\n"
      ]
     }
    ],
@@ -142,6 +142,15 @@
     "    labels=[\"original scan\"]\n",
     "    )\n",
     ")\n",
+    "\n",
+    "\n",
+    "rr.log(\"neuron cell 2\", rr.Points3D(\n",
+    "    positions=rerun_neuron_2.positions, \n",
+    "    colors=rerun_neuron_2.colors,\n",
+    "    labels=[\"seconed scan\"]\n",
+    "    )\n",
+    ")\n",
+    "\n",
     "\n",
     "\n",
     "rr.log(\n",
